examples/tests/invalid/bring.w
bring std;
bring cloud;
bring cloud;